--- a/examples/deploy-java-with-maven-sonar-k8s.yml
+++ b/examples/deploy-java-with-maven-sonar-k8s.yml
@@ -1,5 +1,5 @@
+# This is a comment
 name: End to End CI/CD workflow for Java Applicaton with Maven, Sonar and k8s Intergation
-
 on:
   push:
     branches:
